# pi-airplay

./: .replit  FIXES.md  README.md  alt_port_fix.sh  app.py  app_airplay.py  app_simple.py  clean_fix.sh  collect_diagnostics.sh  development_log.md  diagnose_shairport.sh  fix_acoustid.sh  fix_metadata.sh  fix_web_interface.sh  install_dependencies.sh  install_pi_airplay.sh  install_pi_airplay_simple.sh  install_pi_dad.sh  install_services.sh  pi-airplay.service  pi_airplay.sh  pyproject.toml  replit.nix  restart_web_interface.sh  run_pi_airplay.sh  run_shairport.sh  script_analysis.md  setup_api_key.py  setup_instructions.md  setup_services.sh  shairport-sync.service  start_music_display.sh  start_pi_airplay.sh  start_pi_dad.sh  start_pi_dad_basic.sh  summary.html  sync_log.py  system_install_dependencies.sh  system_service.sh  troubleshoot.sh
attached_assets/: Pasted--venv-ivpi-pi-Pi-DAD-diagnose-shairport-sh-Shairport-sync-Diagnostic-Tool-Checking-s-1742701632278.txt  Pasted--venv-ivpi-pi-Pi-DAD-start-pi-dad-basic-sh-Using-virtual-environment-WARNING-Port-5000-is-1742703020788.txt  Pasted-ALSA-lib-conf-c-5180-snd-config-evaluate-function-snd-func-refer-returned-error-No-such-file-or--1742706711967.txt  Pasted-JackShmReadWritePtr-JackShmReadWritePtr-Init-not-done-for-1-skipping-unlock-JackShmReadWritePt-1742706137071.txt  Pasted-Pi-AirPlay-Troubleshooting-Tool-Checking-if-shairport-sync-is-installed-shairport-sync-is-in-1742776197300.txt  Pasted-ivpi-pi-Pi-DAD-alt-port-fix-sh-Stopping-any-existing-shairport-sync-processes-Using-virtual-1742705921687.txt  (+9 more)
(+38 files in other folders)
