[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "eventlet>=0.39.0",
    "flask>=3.1.0",
    "flask-socketio>=5.5.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.1",
    "numpy>=2.1.3",
    "pyaudio>=0.2.14",
    "sounddevice>=0.5.1",
]
