[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "colorthief>=0.2.1",
    "dejavu>=1.5.0",
    "eventlet>=0.39.0",
    "flask>=3.1.0",
    "flask-socketio>=5.5.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.1",
    "musicbrainzngs>=0.7.1",
    "numpy>=2.1.3",
    "pillow>=11.1.0",
    "pyacoustid>=1.3.0",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "requests>=2.32.3",
    "sounddevice>=0.5.1",
]
